<resources>
    <string name="app_name">UploadPicture</string>

    <string name="refresh">Refresh</string>
    <string name="upload">Upload</string>
    <string name="delete_remote_file">Delete remote file</string>
    <string name="download">Download</string>
    <string name="delete_local_file">Delete local file</string>
    <string name="youre_doing_it_wrong">You\'re doing it wrong</string>
    <string name="todo_start_refresh">TODO: start refresh</string>
    <string name="todo_start_upload">TODO: start upload</string>
    <string name="todo_start_remote_deletion">TODO: start remote deletion</string>
    <string name="todo_start_download">TODO: start download</string>
    <string name="todo_start_local_deletion">TODO: start local deletion</string>
    <string name="todo_operation_finished_in_success">TODO: operation finished in success</string>
    <string name="todo_operation_finished_in_fail">TODO: operation finished in fail</string>
    <string name="upload_folder_path">to_upload</string>
    <string name="download_folder_path">downloaded</string>
    <string name="error_copying_sample_file">Sample file could not be saved in temporal folder; upload will not work</string>
    <string name="sample_file_name">nc_logo.png</string>
    <string name="sample_file_mimetype">image/png</string>
    <string name="error_deleting_local_file">Downloaded file could not be deleted</string>
    <string name="getlist">获取列表</string>
    <string name="uploadfile">上传文件</string>
    <string name="create_filefolder">创建文件夹</string>
    <string name="downloadphoto">下载相机照片</string>
    <string name="get_nc_address">获取nc地址</string>
    <string name="get_account_password">获取账号密码</string>
    <string name="get_phone_imei">获取手机imei</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="closeDevice">关机</string>
    <string name="rescaner">重新扫描</string>
    <string name="opengpioview">端口界面</string>
    <string name="openpreview_view">打开预览界面</string>
    <string name="closepreview_view">关闭预览界面</string>
    <string name="clear_screen">清屏</string>
    <string name="formatusb">格式化USB</string>
    <string name="formattf">FormatTF</string>
    <string name="formatcamera">格式化相机</string>
    <string name="uploadusetimetext">本次同步到服务器耗时</string>
    <string name="backupNumberText">本次从相机同步到服务器数量</string>
    <string name="uploadnumbertext">本次从相机同步到U盘数量</string>
    <string name="camerastatetext">相机状态</string>
    <string name="isconnectnetworktext">是否连网</string>
    <string name="serverstatetext">服务器状态</string>
    <string name="mqttstatetext">mqtt状态</string>
    <string name="uploadmodeltext">上传的模式</string>
    <string name="accessnumbertext">入网号</string>
    <string name="remotenametext">云端名称</string>
    <string name="upanspacetext">U盘空间</string>
    <string name="upanpicturecounttext">U盘图片数量</string>
    <string name="hasuploadpicturenumbertext">已上传张数</string>
    <string name="hasdownloadpicturenumbertext">已下载张数</string>
    <string name="currentVersion">当前版本：</string>
    <string name="serverversionT">最新版本：</string>
    <string name="camera_picture_count">相机照片总数：</string>
    <string name="camera_device_name">相机名称：</string>
    <string name="cameraScanerErroMessageText">相机扫描异常信息</string>
    <string name="catErrorLog">查看异常</string>
    <string name="phone_number">卡号：</string>
    <string name="imei">imei</string>
    <string name="updatebeta">升级beta</string>
    <string name="u_state">U盘状态</string>


</resources>