<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wholeView"
    android:layout_width="match_parent"
    android:keepScreenOn="true"
    android:layout_height="match_parent"
    android:visibility="visible">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/卡号View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/imeiView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/imei"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/当前版本View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/currentVersion"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/最新版本View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/serverversionT"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/相机状态View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/camerastatetext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/U盘状态View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/u_state"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/联网状态View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/isconnectnetworktext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/服务器状态View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/serverstatetext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/mqtt状态View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/mqttstatetext"
                android:textColor="#000000"
                android:textSize="11sp" />




            <TextView
                android:id="@+id/云端名称View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/remotenametext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/上传模式View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/uploadmodeltext"
                android:textColor="#000000"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/U盘空间View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/upanspacetext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/U盘照片总数View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/upanpicturecounttext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/相机照片总数View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/camera_picture_count"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/相机名称View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/camera_device_name"
                android:textColor="#000000"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/本次从相机同步到服务器数量View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/backupNumberText"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/本次从相机同步到U盘数量View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/uploadnumbertext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/本次同步到服务器耗时View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/uploadusetimetext"
                android:textColor="#000000"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/已上传张数View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/hasuploadpicturenumbertext"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/已下载张数View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text="@string/hasdownloadpicturenumbertext"
                android:textColor="#000000"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/升级结果View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:textColor="#000000"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/下载升级包进度View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:onClick="onClickHandler"
                android:text=""
                android:textColor="#000000"
                android:textSize="11sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/guanjiBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closeDevice" />

        <Button
            android:id="@+id/rescanerBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescaner" />

        <Button
            android:id="@+id/openProtActivityBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opengpioview" />


        <Button
            android:id="@+id/clearViewBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_screen" />

        <Button
            android:id="@+id/formatUSBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/formatusb" />

        <Button
            android:id="@+id/formatCameraBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formatcamera" />

        <Button
            android:id="@+id/updateBeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updatebeta" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="270dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/messageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>




</RelativeLayout>

